--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -2,14 +2,14 @@
 # student number, and that's what makes sure that you get a mark.
 
 name: Your Name
-studentNumber: z1234567 # if you're not at UNSW, your org name, e.g. BVN
+studentNumber: z5439457 # if you're not at UNSW, your org name, e.g. BVN
 officialEmail: noIdea@unsw.edu.au
 contactEmail: # don't write on this line
-  firstBit: firstName.Lastname # this avoids spam, the @ is implied
-  otherBit: whereIwork.com
+  firstBit: louis.sabri # this avoids spam, the @ is implied
+  otherBit: gmail.com
 # accounts
-stackOverflowLink: https://stackoverflow.com/users/1835727/ben
-github: notionparallax
+stackOverflowLink: https://stackoverflow.com/users/19253673/louissabrii
+github: louissabri
 
 # This format is called YAML which stands for Yet Another Markup Language
 # It's supposed to be machine readable, and human readable. It does a pretty 
