missed another thing in the aboutMe

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -3,7 +3,7 @@
 
 name: Louis Sabri
 studentNumber: z5439457 # if you're not at UNSW, your org name, e.g. BVN
-officialEmail: noIdea@unsw.edu.au
+officialEmail: z5439457@unsw.edu.au
 contactEmail: # don't write on this line
   firstBit: louis.sabri # this avoids spam, the @ is implied
   otherBit: gmail.com
